<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Remembeer</string>

    <string name="beername">Beer name:</string>
    <string name="container">Container:</string>
	<string name="container_prompt">Choose the container</string>
	<string name="drink_when">Drink when:</string>
	<string name="drink_when_prompt">Choose a time</string>
	<string name="save">Save beer!</string>
	<string name="done">Done</string>
	<string name="cancel">Cancel</string>
	
	<string name="addbeerdone_title">Beer added</string>
	<string name="morestats">See more stats</string>
	<string name="addanother">Drink another!</string>
	
	<string name="your_rating">Your rating:</string>
	<string name="addbeer_fromhistory">Add a beer</string>
	<string name="charts_fromstats">View charts</string>
	
	<string name="abvtitle">abvtitle</string>
	<string name="avg_rating">avg_rating</string>
	<string name="brewery">brewery</string>
	<string name="count">count</string>
	<string name="location">location</string>
	<string name="notes">notes</string>

	<string name="viewstat_placeholder">This is where the stat name goes</string>
	
	<string name="pref_addBeerDoneActivity">Beer add next screen</string>
	<string name="pref_addBeerDoneActivity_default">History</string>	
	<string name="pref_remindersEnabled">Show rating reminders</string>
	<string name="pref_remindersVibrate">Vibrate</string>
	<string name="pref_remindersDelay">Rating reminders delay</string>
	<string name="pref_remindersDelay_summary">In minutes</string>
	<string name="pref_twitterEnabled">Post to Twitter</string>
	<string name="pref_twitterEnabled_summary">Automatically post Drink Now beers to Twitter</string>
	<string name="pref_twitterTemplate">Twitter template</string>
	<string name="pref_twitterTemplate_default">I just drank a BEERNAME #beer</string>
	
	<string name="twitter_signin">Setup your Twitter account</string>
	<string name="twitter_setup_username">Username</string>
	<string name="twitter_setup_password">Password</string>
	<string name="twitter_teardown_title">Really clear your stored Twitter\nusername and password?</string>
	<string name="twitter_login">Login</string>
	<string name="twitter_progress_title">Authorizing</string>
	<string name="twitter_progress_message">Authorizing Twitter account</string>
	<string name="twitter_whoops">Whoops, unable to login with that password.</string>
	
	<string name="reminder_tickerText">How\'s that beer you\'re drinking?</string>
	<string name="reminder_title">How\'s that beer?</string>
	<string name="reminder_text">Take a moment and rate your beer.</string>

	<string name="stat_beerCount">Number of beers drunk</string>
	<string name="stat_favoriteBeer">Favorite beer</string>
	<string name="stat_mostDrunkBeer">Most drunk beer</string>
	<string name="stat_favoriteDrinkingHour">Favorite drinking hour</string>
	
	<string name="addbeerdone_prefix_small">That was your</string>
	<string name="addbeerdone_num_eq1">first</string>
	<string name="addbeerdone_num_eq2">second</string>
	<string name="addbeerdone_suffix_thisMonth_small">beer so far this month</string>
	<string name="addbeerdone_suffix_last7days_small">beer in the last 7 days</string>
	<string name="addbeerdone_suffix_beerTypes_small">different type of beer</string>
	<string name="addbeerdone_suffix_thisYear_small">beer so far this year</string>

	<string name="addbeerdone_prefix_large">You have drunk</string>
	<string name="addbeerdone_suffix_thisMonth_large">beers so far this month</string>
	<string name="addbeerdone_suffix_last7days_large">beers in the last 7 days</string>
	<string name="addbeerdone_suffix_beerTypes_large">different types of beer</string>
	<string name="addbeerdone_suffix_thisYear_large">beers so far this year</string>
	
	<string name="optionsmenu_addbeer">Add Beer</string>
	<string name="optionsmenu_history">History</string>
	<string name="optionsmenu_history_sort_alpha">Sort by beer name</string>
	<string name="optionsmenu_history_sort_date">Sort by date</string>
	<string name="optionsmenu_export">Import/Export</string>
	<string name="optionsmenu_statistics">Statistics</string>
	<string name="optionsmenu_settings">Settings</string>
	
	<string name="import_title">Import / Export</string>
	<string name="export_title">Last Export: </string>
	<string name="export_date">Never</string>
	<string name="export_email">Export to Email</string>
	<string name="export_local">Export Locally</string>
	<string name="import_local">Import Beers\nfrom local file</string>
	<string name="export_whoops">Whoops, unable to export your beers</string>
	<string name="export_success">Successfully exported database to \n</string>
	<string name="import_throbber">Loading Beers from local file</string>
	<string name="import_title_before">Imported </string>
	<string name="import_title_after"> Beers</string>
	
	<string name="drink_another">Drink another </string>
	<string name="history_delete">Delete this beer?</string>
	<string name="history_delete_warn">This action cannot be undone.</string>
	<string name="history_clear_search">Show all History</string>
	
	<string name="search_label">Search your Beers</string>
</resources>
