<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android">
	
	<PreferenceCategory
		android:title="Basic settings">
		<ListPreference
			android:title="@string/pref_addBeerDoneActivity"
			android:defaultValue="@string/pref_addBeerDoneActivity_default"
			android:key="addBeerDoneActivity"
			android:entries="@array/pref_addBeerDoneActivityChoices"
			android:entryValues="@array/pref_addBeerDoneActivityValues" />
	</PreferenceCategory>
	
	<PreferenceCategory
		android:title="Reminder settings">
		<CheckBoxPreference
			android:title="@string/pref_remindersEnabled"
			android:defaultValue="true"
			android:key="remindersEnabled" />
		<CheckBoxPreference
			android:title="@string/pref_remindersVibrate"
			android:defaultValue="true"
			android:dependency="remindersEnabled"
			android:key="remindersVibrate" />
		<EditTextPreference
			android:title="@string/pref_remindersDelay"
			android:summary="@string/pref_remindersDelay_summary"
			android:defaultValue="5"
			android:dependency="remindersEnabled"
			android:key="remindersDelay" />
	</PreferenceCategory>
	<PreferenceCategory
		android:title="Twitter settings">
		<CheckBoxPreference
			android:title="@string/pref_twitterEnabled"
			android:summary="@string/pref_twitterEnabled_summary"
			android:defaultValue="false"
			android:key="twitterEnabled" />
		<CheckBoxPreference
			android:title="@string/pref_twitterClear"
			android:summary="@string/pref_twitterClear_summary"
			android:defaultValue="false"
			android:key="twitterClear" />
		<EditTextPreference
			android:title="@string/pref_twitterTemplate"
			android:defaultValue="@string/pref_twitterTemplate_default"
			android:dependency="twitterEnabled"
			android:key="twitterTemplate" />
	</PreferenceCategory>
</PreferenceScreen>

