<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
	<TextView  
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/beername"
	    />
    
    <AutoCompleteTextView android:id="@+id/beername"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

	<TextView
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content"
	    android:text="@string/container"
	    />
    
    <Spinner android:id="@+id/container"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:drawSelectorOnTop="true"
        android:prompt="@string/container_prompt" />

	<TextView
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content"
	    android:text="@string/drink_when"
	    />
    
    <Spinner android:id="@+id/drinkwhen"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:drawSelectorOnTop="true"
        android:prompt="@string/drink_when_prompt" />
</LinearLayout>
