<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
android:id="@+id/ImportExport"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:orientation="vertical"
xmlns:android="http://schemas.android.com/apk/res/android">
<TextView
android:id="@+id/ExportTitle"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/export_title"
android:layout_gravity="center_horizontal"></TextView>
<TextView
android:id="@+id/ExportDate"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:padding="2px"
android:text="@string/export_date"
android:layout_gravity="center_horizontal"></TextView>
<Button
android:id="@+id/ExportEmail"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/export_email"
android:layout_gravity="center_horizontal"></Button>
<Button
android:id="@+id/ExportLocal"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/export_local"
android:layout_gravity="center_horizontal"></Button>
<Button
android:id="@+id/ImportLocal"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_marginTop="15px"
android:lines="2"
android:minWidth="110px"
android:text="@string/import_local"
android:layout_gravity="center_horizontal"></Button>
<Button
android:id="@+id/ExportDone"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_marginTop="15px"
android:text="@string/export_done"
android:layout_gravity="center_horizontal"></Button>
</LinearLayout>
