<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content">

	<LinearLayout
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:paddingLeft="6dip"
		android:paddingRight="6dip">

		<TextView
			android:id="@+id/beernameCaption"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/beername" />

		<AutoCompleteTextView
			android:id="@+id/beername"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:inputType="textCapWords" />

		<FrameLayout
			android:layout_width="wrap_content"
			android:layout_height="80dip"
			android:layout_marginLeft="10dip"
			android:layout_marginRight="10dip"
			android:padding="6dip"
			android:background="#333">
			<include
				layout="@layout/addbeer_beerinfonone" />
			<include
				layout="@layout/addbeer_beerinfoloading" />
			<include
				layout="@layout/addbeer_beerinfopreview" />
		</FrameLayout>

		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/container"
			android:paddingTop="10dip" />

		<Spinner
			android:id="@+id/container"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:drawSelectorOnTop="true"
			android:prompt="@string/container_prompt" />

		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/drink_when" />

		<Spinner
			android:id="@+id/drinkwhen"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:drawSelectorOnTop="true"
			android:prompt="@string/drink_when_prompt" />

		<TextView
			android:layout_width="fill_parent"
			android:layout_height="20dip" />

		<Button
			android:id="@+id/save"
			android:layout_width="150dip"
			android:layout_height="wrap_content"
			android:text="@string/save"
			android:layout_gravity="center" />
	</LinearLayout>

</ScrollView>