<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/configure_twitter"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content">
   	<TextView
		android:id="@+id/UserTitle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:paddingLeft="3px"
		android:text="@string/twitter_setup_username"
		android:textSize="16sp"></TextView>
	<EditText
		android:id="@+id/Username"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/UserTitle"
		android:textSize="18sp"></EditText>
	<TextView
		android:id="@+id/PassTitle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:paddingLeft="3px"
		android:layout_below="@+id/Username"
		android:text="@string/twitter_setup_password"
		android:textSize="16sp"></TextView>
	<EditText
		android:id="@+id/Password"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/PassTitle"
		android:textSize="18sp"
		android:paddingBottom="15px"
		android:password="true"></EditText>
	<Button
		android:id="@+id/twitLogin"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/Password"
		android:layout_alignParentLeft="true"
		android:text="@string/twitter_login"
		android:textSize="16sp"></Button>
	<Button
		android:id="@+id/twitCancel"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/Password"
		android:layout_alignParentRight="true"
		android:text="@android:string/cancel"
		android:textSize="16sp"></Button>
</RelativeLayout>
